# meshlab

./: .gitignore  .gitmodules  .mailmap  .travis.yml  CMakeLists.txt  ML_VERSION  README.md  VERSION  appveyor.yml  compare.json  history.txt  readme.txt  snap_noversion.yaml  snapcraft.yaml
src/: .clang-format  .cmake-format.json  .editorconfig  .qmake.conf  CMakeLists.txt  Config.cmake.in  README.md  README.txt  external.cmake  external.pro  external_common.cmake  find_system_libs.pri  general.pri  make-cmake.py  meshlab.pro  meshlab_2016_tested_plugins.pro  meshlab_full.pro  meshlab_full.sln  meshlab_full_appveyor.pro  meshlab_mini.pro  meshlab_miniv20.pro  meshlab_vmust.pro  meshlabv11.pro  meshlabv12.pro  shared.pri  shared_post.pri  sharedfilter.pri
src/cmake/: FindGMP.cmake  FindLib3ds.cmake  FindOpenCTM.cmake  FindQhull.cmake  Findmuparser.cmake  meshlab_global_settings.cmake  meshlab_tools.cmake
src/common/: CMakeLists.txt  GLExtensionsManager.cpp  GLExtensionsManager.h  GLLogStream.cpp  GLLogStream.h  alnParser.h  common.pro  common.qrc  common.vcxproj  common.vcxproj.filters  compile_time_version.h  environment.cpp  environment.h  filterparameter.cpp  filterparameter.h  filterparameter_old.h  filterscript.cpp  filterscript.h  gl_defs.h  globals.cpp  globals.h  glu_defs.h  interfaces.cpp  interfaces.h  mainwindow_interface.h  meshlab-common.qrc  meshlab_singletons.cpp  meshlab_singletons.h  meshlabdocumentbundler.cpp  meshlabdocumentbundler.h  meshlabdocumentxml.cpp  meshlabdocumentxml.h  meshmodel.cpp  meshmodel.h  ml_mesh_type.h  ml_scene_renderer.cpp  ml_scene_renderer.h  ml_selection_buffers.h  ml_shared_data_context.cpp  ml_shared_data_context.h  (+19 more)
src/common/debug/: meshlab-common.vcxproj.FileListAbsolute.txt
src/common/filter_history/: filter.cpp  filter.h  filter_history.cpp  filter_history.h
src/common/filter_parameter/: TODO.txt  filterparameter.cpp  filterparameter.h  rich_parameter.cpp  rich_parameter.h  rich_parameter_list.cpp  rich_parameter_list.h  rich_parameter_set.cpp  rich_parameter_set.h  value.cpp  value.h  visitor.cpp  visitor.h
src/common/globals/: globals.cpp  globals.h  singletons.cpp  singletons.h
src/common/interfaces/: decorate_plugin_interface.cpp  decorate_plugin_interface.h  edit_plugin_interface.h  filter_plugin_interface.cpp  filter_plugin_interface.h  io_plugin_interface.h  (+6 more)
src/common_gui/: CMakeLists.txt
src/curvature/: curvature.cpp  curvature.pro
src/fgt/: README.md
src/install/: Info.plist  Release Notes.txt  build_allinc_src_archive.sh  build_src_archive.sh  building_meshlab.txt  macinstall_v12.sh  macinstall_v13.sh  macinstall_v2016.sh  meshlab-64bit-appveyor.nsi  meshlab-64bit.nsi  meshlab.nsi  meshlab_dmg.json  mkdmg.sh  readme.txt
src/meshlab/: CMakeLists.txt  GLLogStream.cpp  GLLogStream.h  GenericELDialog.h  Info.plist  Info_old.plist  LogStream.h  additionalgui.cpp  additionalgui.h  alnParser.h  changemaskDialog.cpp  changemaskDialog.h  changetexturename.cpp  changetexturename.h  customDialog.cpp  customDialog.h  decimatorDialog.h  detacherDialog.h  filterScriptDialog.cpp  filterScriptDialog.h  filterparameter.cpp  filterparameter.h  filterscript.cpp  filterscript.h  filterthread.cpp  filterthread.h  glarea.cpp  glarea.h  glarea.ipp  glarea_setting.cpp  glarea_setting.h  interfaces.h  layerDialog.cpp  layerDialog.h  lightingDialog.cpp  lightingDialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_Init.cpp  (+47 more)
src/meshlab_1.3/: alnParser.h  changetexturename.cpp  changetexturename.h  customDialog.cpp  customDialog.h  filterScriptDialog.cpp  filterScriptDialog.h  glarea.cpp  glarea.h  layerDialog.cpp  layerDialog.h  mainwindow.h  mainwindow_Init.cpp  mainwindow_RunTime.cpp  meshlab.pro  meshlab.qrc  plugindialog.cpp  plugindialog.h  saveSnapshotDialog.cpp  saveSnapshotDialog.h  savemaskexporter.cpp  savemaskexporter.h
src/meshlab_2.0/: glarea.cpp  glarea.h  main.cpp  mainwindow.h  mainwindow_Init.cpp  mainwindow_RunTime.cpp  meshlab_1.3.pro  meshlab_2.0.pro  multiViewer_Container.cpp  multiViewer_Container.h  ui_layerDialog.h
src/meshlab_2.01/: glarea_setting.h  layerDialog.cpp  layerDialog.h  mainwindow_Init.cpp  mainwindow_RunTime.cpp
src/meshlab_20/: glarea.cpp  glarea.h  glarea_setting.cpp  mainwindow.h  mainwindow_Init.cpp  mainwindow_RunTime.cpp  meshlab.qrc  meshlab_20.pro  multiViewer_Container.cpp  multiViewer_Container.h  stdpardialog.cpp  stdpardialog.h  viewer.h
src/meshlabplugins/: meshlabplugins.pro  meshlabpluginsv11.pro  meshlabpluginsv12.pro
src/meshlabserver/: CMakeLists.txt  README.md  mainserver.cpp  meshlabserver.pro  meshlabserver.txt  meshlabserver.vcxproj  meshlabserver.vcxproj.filters
src/plugins_experimental/: meshlabserver_vmust.pro
src/plugins_unsupported/: README.md
src/sample/: CgPhong.dae  Laurana50k.ply  LondonHouse.dae  Seymour.dae  Seymour_triangulate.dae  T.ply  block.off  bunny16k.pts  chameleon4k.pts  collada.dae  duck_triangulate.dae  mushroom_wigglatexadescent.dae  readme.txt  screwdriver.ply  seashell.gts  seymourplane_triangulate.dae  sp.3ds  sub.mtl  texturedknot.ply  trim-star.off
src/sampleplugins/: sampleplugins.pro
src/templates/: CMakeLists.template.cmake  common.cmake  decorate_base.cmake  decorate_raster_proj.cmake  decorate_shadow.cmake  edit_align.cmake  edit_measure.cmake  edit_mutualcorrs.cmake  edit_pickpoints.cmake  edit_quality.cmake  filter_clean.cmake  filter_color_projection.cmake  filter_csg.cmake  filter_func.cmake  filter_isoparametrization.cmake  filter_mutualglobal.cmake  filter_mutualinfoxml.cmake  filter_plymc.cmake  filter_qhull.cmake  filter_quality.cmake  filter_sample_gpu.cmake  filter_screened_poisson.cmake  filter_screened_poisson_xml.cmake  filter_sdfgpu.cmake  filter_sketchfab.cmake  filter_ssynth.cmake  filter_texture.cmake  io_3ds.cmake  io_base.cmake  io_collada.cmake  io_ctm.cmake  meshlab.cmake  meshlabserver.cmake  plugin_with_glu.cmake  plugin_with_levmar.cmake  plugin_with_trackball.cmake
src/use_cpu_opengl/: CMakeLists.txt  README.md  main.cpp  moc_predefs.h.cbt  res.qrc  use_cpu_opengl.pro
(+5292 files in other folders)
